--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
 <h1>{{ title }}</h1>
 <hr />
-<h3>Counter: {{ counter }}</h3>
-
-<!-- LLamar un método desde un boton -->
-<button (click)="increaseBy(1)">+1</button>
-<button (click)="increaseBy(-1)">-1</button>
-<br />
-<button (click)="resetCounter()">Reset</button>
+<app-counter></app-counter>
