--- a/src/app/heroes/hero/hero.component.html
+++ b/src/app/heroes/hero/hero.component.html
@@ -16,6 +16,8 @@
   <dd>{{ capitalizedName }}</dd>
 </dl>
 
-<button class="btn btn-primary mx-2">Cambiar nombre</button>
+<button class="btn btn-primary mx-2" (click)="changeHero()">
+  Cambiar nombre
+</button>
 
-<button class="btn btn-primary">Cambiar edad</button>
+<button class="btn btn-primary" (click)="changeAge()">Cambiar edad</button>
