--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -1,1 +1,23 @@
-<h1>DBZ Main Page</h1>
+<h1>DBZ Personajes</h1>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <h4>Listado</h4>
+    <ul class="list-group">
+      <li class="list-group-item">Krillin - 500</li>
+      <li class="list-group-item">Goku - 10,000</li>
+    </ul>
+  </div>
+
+  <div class="col">
+    <h4>Agregar personaje</h4>
+    <form class="row">
+      <input class="form-control mb-2" type="text" placeholder="Nombre" />
+
+      <input class="form-control mb-2" type="number" placeholder="Poder" />
+
+      <button class="btn btn-primary" type="submit">Agregar</button>
+    </form>
+  </div>
+</div>
