--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,21 +3,11 @@
 
 <div class="row">
   <div class="col">
-    <h4>Listado</h4>
-    <ul class="list-group">
-      <li class="list-group-item">Krillin - 500</li>
-      <li class="list-group-item">Goku - 10,000</li>
-    </ul>
+    <dbz-list></dbz-list>
   </div>
 
+  <!-- Add character -->
   <div class="col">
-    <h4>Agregar personaje</h4>
-    <form class="row">
-      <input class="form-control mb-2" type="text" placeholder="Nombre" />
-
-      <input class="form-control mb-2" type="number" placeholder="Poder" />
-
-      <button class="btn btn-primary" type="submit">Agregar</button>
-    </form>
+    <dbz-add-character></dbz-add-character>
   </div>
 </div>
