--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,10 +3,10 @@
 
 <div class="row">
   <div class="col">
-    <dbz-list></dbz-list>
+    <!-- AQUI SE ESTÁ PASANDO LA INFO DEL PADRE AL HIJO -->
+    <dbz-list [characterList]="characters"></dbz-list>
   </div>
 
-  <!-- Add character -->
   <div class="col">
     <dbz-add-character></dbz-add-character>
   </div>
