--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,8 +1,21 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li *ngFor="let character of characterList" class="list-group-item">
+  <li
+    *ngFor="
+      let character of characterList;
+      let i = index;
+      let isFirst = first;
+      let isLast = last;
+      let isEven = even
+    "
+    class="list-group-item"
+  >
+    <span class="text-primary"> {{ i + 1 }}. </span>
+
     <span> {{ character.name }} - </span>
+
     <strong>Power: </strong>
+
     <span>{{ character.power }}</span>
   </li>
 </ul>
