--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,5 +1,6 @@
 <h4>Listado</h4>
 <ul class="list-group">
+  <!-- ngClass sirve para dar clases dinámicas en base a una condicion o condiciones -->
   <li
     *ngFor="
       let character of characterList;
@@ -9,6 +10,10 @@
       let isEven = even
     "
     class="list-group-item"
+    [ngClass]="{
+      'list-group-item-dark': isLast,
+      'list-group-item-primary': isEven
+    }"
   >
     <span class="text-primary"> {{ i + 1 }}. </span>
 
