add & delete character from the list

--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -19,6 +19,6 @@
   />
 
   <button class="btn btn-primary" type="submit">Agregar</button>
-
-  <pre>{{ character | json }}</pre>
+  <!-- ESTA LINEA ES PARA MOSTRAR EL OBJETO COMO JSON -->
+  <!-- <pre>{{ character | json }}</pre> -->
 </form>
