generate & delete characters with id

--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -25,6 +25,8 @@
       <span>{{ character.power }}</span>
     </div>
 
-    <button class="btn btn-danger" (click)="onDeleteCharacter(i)">X</button>
+    <button class="btn btn-danger" (click)="onDeleteCharacter(character.id)">
+      X
+    </button>
   </li>
 </ul>
